tests/paczka1/fuzzy1/85520043.err
Error in line 2: mhYl9iR S902 1,8
Error in line 3: mhYl9iR S817 95,3
Error in line 7: mhYl9iR A634 59,9
Error in line 13: l5S S902 80,4
Error in line 16: S817 A503 50,1
Error in line 25: l5S S902 71,1
Error in line 20: S817 A634 43,3
Error in line 24: L9Tx A503 53,6
Error in line 35: 1aXJ A503 41,7
